--- a/personal-website/css/main.css
+++ b/personal-website/css/main.css
@@ -979,22 +979,10 @@ ul.round-thumbs {
   transform: rotateX(0deg);
   opacity: 1; }
 
-#videos ul {
-  padding-left: 0; }
-  #videos ul li {
-    list-style: none;
-    padding: 1em 2em .5em 0; }
-    #videos ul li:nth-child(2) {
-      padding-right: 0; }
-    #videos ul li iframe {
-      min-width: 25em;
-      max-width: 560;
-      width: 100%; }
-    #videos ul li .video-info {
-      width: 90%;
-      margin-top: .5em;
-      padding: .3em;
-      font-size: 1em; }
+.video-container iframe {
+  max-width: 100%; }
+.video-container .video-info {
+  margin-top: 1rem; }
 
 #painting .painting-img-container {
   text-align: center; }
@@ -1111,3 +1099,33 @@ ul.round-thumbs {
         -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" 100 ")";
         filter: alpha(opacity=100);
         zoom: 1; }
+
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both; }
+
+@-webkit-keyframes shake {
+  0%, 100% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); }
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translate3d(-10px, 0, 0);
+    transform: translate3d(-10px, 0, 0); }
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translate3d(10px, 0, 0);
+    transform: translate3d(10px, 0, 0); } }
+@keyframes shake {
+  0%, 100% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); }
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translate3d(-10px, 0, 0);
+    transform: translate3d(-10px, 0, 0); }
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translate3d(10px, 0, 0);
+    transform: translate3d(10px, 0, 0); } }
+.shake {
+  -webkit-animation-name: shake;
+  animation-name: shake; }
