--- a/personal-website/css/main.css
+++ b/personal-website/css/main.css
@@ -1100,6 +1100,45 @@ ul.round-thumbs {
         filter: alpha(opacity=100);
         zoom: 1; }
 
+.blue-divider {
+  height: 2px;
+  width: 100%;
+  background-color: #6dcff6; }
+
+#contact {
+  height: auto; }
+  #contact .container {
+    margin: 4.854rem auto; }
+  #contact .social-media ul {
+    list-style: none;
+    padding-left: 0; }
+    #contact .social-media ul li {
+      text-align: center;
+      float: left;
+      padding-right: 2em; }
+      #contact .social-media ul li a {
+        text-decoration: none;
+        color: #6dcff6; }
+        #contact .social-media ul li a i {
+          transition: all 0.2s ease-in;
+          -webkit-transition: all 0.2s ease-in;
+          -moz-transition: all 0.2s ease-in;
+          -o-transition: all 0.2s ease-in;
+          -ms-transition: all 0.2s ease-in; }
+        #contact .social-media ul li a:hover i {
+          margin-top: -.2em;
+          transition: all 0.2s ease-in;
+          -webkit-transition: all 0.2s ease-in;
+          -moz-transition: all 0.2s ease-in;
+          -o-transition: all 0.2s ease-in;
+          -ms-transition: all 0.2s ease-in; }
+      #contact .social-media ul li:first-child {
+        padding-left: 0; }
+
+.contact-form-container button#form-submit {
+  background: #6dcff6;
+  color: #fff; }
+
 .animated {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
@@ -1129,3 +1168,6 @@ ul.round-thumbs {
 .shake {
   -webkit-animation-name: shake;
   animation-name: shake; }
+
+footer {
+  text-align: center; }
