revise home page for mobile view

--- a/personal-website/css/media.css
+++ b/personal-website/css/media.css
@@ -26,18 +26,28 @@
     height: 100vh; }
 
   .snow-mountain img {
-    max-width: 350px; }
+    max-width: 290px; }
 
-  .home-title-container {
-    top: 74%; }
+  svg#rects-01 {
+    width: 60px; }
+
+  svg#rects-02 {
+    width: 50px; }
 
   .rects-01 {
-    top: 16%;
+    top: 14%;
     right: 8%; }
 
   .rects-02 {
-    top: 53%;
-    left: 5%; }
+    top: 50%;
+    left: 4%; }
+
+  .home-title-container {
+    width: 100%; }
+    .home-title-container .home-name {
+      letter-spacing: 5px; }
+    .home-title-container .home-title {
+      letter-spacing: 8px; }
 
   .skills-title, .portfolio-title {
     margin-top: 2.617924em; }
