--- a/personal-website/css/main.scss
+++ b/personal-website/css/main.scss
@@ -105,7 +105,7 @@ $easing: cubic-bezier(.6, .05, .28, .91);
     overflow: auto;
     top: 0px;
     left: -20%;
-    width: 20%;
+    //width: 20%;
     opacity: 0;
     padding: 25px 0px;
     height: 100%;
@@ -156,7 +156,7 @@ $easing: cubic-bezier(.6, .05, .28, .91);
 		    content: " ";
 		    background-color: #fff;
 		    position: absolute;
-		    left: 25%;
+		    left: 50%;
 		    @include transition(all 0.3s ease-in-out);
 			top: 75%;
 		}
@@ -164,8 +164,8 @@ $easing: cubic-bezier(.6, .05, .28, .91);
 		&:hover{
 			@include transition(all 0.3s ease-in-out);
 		    &:after {
-				width: 38%;
-				left: 8%;
+				width: 70%;
+				left: 12%;
 			}
 		}
 	}
