--- a/personal-website/css/media.scss
+++ b/personal-website/css/media.scss
@@ -45,7 +45,7 @@ $screen-lg-min: 1200px;
 	}
 
 	.home-title-container{
-		//top: 74%;
+		top: 73%;
 	}
 	
 	.rects-01{
@@ -66,6 +66,22 @@ $screen-lg-min: 1200px;
 		.home-title{
 			letter-spacing: 8px;
 		}
+	}
+	
+	.arrow{
+		width: 30px;
+		height: 30px;
+		&:before{
+			width: 15px;
+			height: 15px;
+		}
+	}
+
+	#nav-icon.active{
+		left: 60%;
+	}
+	#nav-box{
+		top: 3em;
 	}
 
 	//about page
