--- a/personal-website/css/main.scss
+++ b/personal-website/css/main.scss
@@ -660,7 +660,7 @@ rect.rect{
 		max-height: em(150)*4+2.5em;
 		overflow: auto;
 		li{	
-			min-height: em(150);
+			//min-height: em(150);
 			list-style: none;
 			padding: .1em;
 			float: left;
