--- a/personal-website/css/media.css
+++ b/personal-website/css/media.css
@@ -155,6 +155,9 @@
     margin: 1.618em auto; } }
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px) {
+  #skills {
+    height: 50vh; }
+
   .snow-mountain img {
     max-width: 380px; }
 
@@ -178,7 +181,12 @@
     letter-spacing: 10px; }
 
   .bottle-container .bottle {
-    margin: 1em; } }
+    margin: 1em; }
+
+  .table-container {
+    display: block;
+    margin-top: -4em;
+    width: 90%; } }
 /* tablet landscape and mobile */
 /* tablet landscpae */
 @media (min-width: 992px) and (max-width: 1199px) {
