--- a/personal-website/css/media.scss
+++ b/personal-website/css/media.scss
@@ -220,7 +220,11 @@ $screen-lg-min: 1200px;
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px) {
-	
+	//general
+	#skills{
+		height: 50vh;
+	}
+
 	//home page
 	.snow-mountain{
 		img{
@@ -263,6 +267,11 @@ $screen-lg-min: 1200px;
 		.bottle{
 			margin: 1em;
 		}
+	}
+	.table-container{
+		display: block;
+		margin-top: -4em;
+		width: 90%;
 	}
 	
 	//portfolio page
