--- a/personal-website/css/media.scss
+++ b/personal-website/css/media.scss
@@ -273,6 +273,9 @@ $screen-lg-min: 1200px;
 		margin-top: -4em;
 		width: 90%;
 	}
+	.skills-title{
+		margin-top: $phi * $phi * $phi * 1em;
+	}
 	
 	//portfolio page
 	
