--- a/personal-website/css/media.css
+++ b/personal-website/css/media.css
@@ -181,7 +181,7 @@
     letter-spacing: 10px; }
 
   .bottle-container .bottle {
-    margin: 1em; }
+    margin: 0; }
 
   .table-container {
     display: block;
