--- a/personal-website/css/media.scss
+++ b/personal-website/css/media.scss
@@ -265,7 +265,7 @@ $screen-lg-min: 1200px;
 	//skills page
 	.bottle-container{
 		.bottle{
-			margin: 1em;
+			margin: 0;
 		}
 	}
 	.table-container{
