--- a/personal-website/css/media.css
+++ b/personal-website/css/media.css
@@ -181,11 +181,11 @@
     letter-spacing: 10px; }
 
   .bottle-container .bottle {
-    margin: 0; }
+    margin: 1em; }
 
   .table-container {
     display: block;
-    margin-top: -4em;
+    margin-top: -7em;
     width: 90%; }
 
   .skills-title {
