--- a/personal-website/css/media.scss
+++ b/personal-website/css/media.scss
@@ -265,12 +265,12 @@ $screen-lg-min: 1200px;
 	//skills page
 	.bottle-container{
 		.bottle{
-			margin: 0;
+			margin: 1em;
 		}
 	}
 	.table-container{
 		display: block;
-		margin-top: -4em;
+		margin-top: -7em;
 		width: 90%;
 	}
 	.skills-title{
